// Configuration settings for the Cookie Server.

syntax = "proto3";

import "proto/cookie.proto";
import "proto/http.proto";

package hazaelsan.ssh_relay.cookie_server;

option go_package = "github.com/hazaelsan/ssh-relay/cookie-server/proto/config_go_proto";

// Next ID: 4
message Config {
  // Server listening options.
  hazaelsan.ssh_relay.HttpServerOptions server_options = 1;

  // Fallback relay host (and optional :port).
  // Only used if a more suitable relay host cannot be found for a given
  // client.
  // If not specified and a more specific relay host cannot be found, an error
  // will be sent to the client instead.
  // NOTE: Relay selection is not implemented yet, therefore this field is required.
  string fallback_relay_host = 2;

  // Settings for the origin cookie.
  hazaelsan.ssh_relay.Cookie origin_cookie = 3;
}
