// Configuration settings for cookies set by the Cookie Server and consumed by
// the SSH relays.

syntax = "proto3";

import "google/protobuf/duration.proto";

package hazaelsan.ssh_relay;

option go_package = "github.com/hazaelsan/ssh-relay/proto/cookie_go_proto";

// Cookie settings, see https://tools.ietf.org/html/rfc6265.
// NOTE: This message is experimental and subject to change at any time.
message Cookie {
  // Name of the cookie, required.
  string name = 1;

  // Domain to set on the cookie (e.g., ".example.org").
  // Not required but should nearly always be set.
  // NOTE: Cookies set by the Cookie Server MUST be readable by the SSH relays.
  string domain = 2;

  // Path to set on the cookie, typically should be set to "/".
  string path = 3;

  // Cookie lifetime, MUST NOT be negative.
  // NOTE: Per RFC 6265 this value is rounded down to seconds.
  google.protobuf.Duration max_age = 4;
}
